<resources>
    <string name="app_name">RentMe</string>
    <string name="add_property_title">Add Property</string>
    <string name="filter_properties_title">Filters</string>
    <string name="view_property_details_title">Property Details</string>
    <string name="view_account_title">Account</string>
    <string name="listings">Listings</string>
    <string name="favorites">Favorites</string>
    <string name="account_info">Account Info</string>
    <string name="change_password">Change Password</string>

    <!--    ____________________________Property Details____________________________ -->
    <string name="contactInfo">"Contact Information"</string>    <!--    Owner Details-->
    <string name="name">"Name"</string>
    <string name="phone">"Phone"</string>
    <string name="email">"Email"</string>
    <string name="attributes">"Attributes"</string>         <!--    Property Attributes -->
    <string name="location">"in"</string>
    <string name="address">"Address</string>
    <string name="city">"City"</string>
    <string name="zipCode">"ZIP"</string>
    <string name="state">"State"</string>
    <string name="bedrooms">"Bedrooms"</string>
    <string name="bathrooms">"Bathrooms"</string>
    <string name="parkingSpaces">"Parking"</string>
    <string name="amenities">"Amenities"</string>           <!--    Property Amenities-->
    <string name="yard">"Yard"</string>
    <string name="pool">"Pool"</string>
    <string name="laundry">"Laundry"</string>
    <string name="assistedLiving">"Handicap Accessible"</string>
    <string name="rules">"Rules"</string>                   <!--    Rules-->
    <string name="rate">"Rate"</string>
    <string name="nonSmoking">"Non-Smoking"</string>
    <string name="petsAllowed">"Pets Allowed"</string>
    <string name="bio">"Bio"</string>                       <!--    Other-->
    <string name="propertyType">Type</string>
    <!-- ___________________________________________________________________________ -->

    <!--    Formatting & Spacing-->
    <string name="addressFormat">"%s\n%s, %s %s"</string>
    <string name="locationFormat">" %s, %s"</string>
    <string name="dollarSign">"$"</string>
    <string name="colon">":"</string>
    <string name="rateMonthFormat">"$%.2f/month"</string>
    <string name="rateYearFormat">"$%.2f/year"</string>
    <string name="rateMonth">"/month"</string>
    <string name="rateyear">"/year"</string>
    <string name="rateFormat">"$%.2f"</string>
    <string name="cityStateSpacing">"    %s"</string>
    <string name="propertyStateSpacing">"   %s"</string>
    <string name="anyDouble">"%.1f"</string>
    <string name="anyInt">"%d"</string>

    <!--    Filter Properties Strings-->
    <string name="minTextView">Min $</string>
    <string name="toMaxTextView">to Max $</string>
    <string name="propertyTypeTextView">Property Type</string>
    <string name="rentalAmenitiesTextView">Rental Amenities</string>
    <string name="rentalRulesTextView">Rental Rules</string>
    <string name="smokingAmenityTextView">Smoking Allowed</string>
    <string name="parkingAmenityTextView">Parking Available</string>
    <string name="poolAmenityTextView">Pool Available</string>
    <string name="backyardAmenityTextView">Backyard</string>
    <string name="laundryTextView">In-home Laundry</string>
    <string name="resetFilters">Reset</string>
    <string name="applyFilters">Apply</string>

    <string-array name="bedroomsRange">
        <item>Studio</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5+</item>
    </string-array>

    <string-array name="bathroomsRange">
        <item>1</item>
        <item>1.5</item>
        <item>2</item>
        <item>2.5</item>
        <item>3</item>
        <item>4+</item>
    </string-array>

    <string-array name="filterCategories">
        <item>Any</item>
        <item>Apartment</item>
        <item>Condominium</item>
        <item>House</item>
        <item>Mobile Home</item>
        <item>Room</item>
    </string-array>

    <string-array name="rules">
        <item>Any</item>
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <!--    Create Profile Buttons-->
    <string name="propertyAdded">Success</string>
    <string name="addProperty">Add Property</string>

    <!--    Create Profile Spinner String Arrays-->
    <string name="selectCategory">— Category —</string>

    <string-array name="categories">
        <item>@string/selectCategory</item>
        <item>Apartment</item>
        <item>Condominium</item>
        <item>House</item>
        <item>Mobile Home</item>
        <item>Room</item>
    </string-array>

    <string name="selectState">— State —</string>

    <string-array name="states">
        <item>@string/selectState</item>
        <item>AL</item>
        <item>AK</item>
        <item>AZ</item>
        <item>AR</item>
        <item>CA</item>
        <item>CO</item>
        <item>CT</item>
        <item>DE</item>
        <item>FL</item>
        <item>GA</item>
        <item>HI</item>
        <item>ID</item>
        <item>IL</item>
        <item>IN</item>
        <item>IA</item>
        <item>KS</item>
        <item>KY</item>
        <item>LA</item>
        <item>ME</item>
        <item>MD</item>
        <item>MA</item>
        <item>MI</item>
        <item>MN</item>
        <item>MS</item>
        <item>MO</item>
        <item>MT</item>
        <item>NE</item>
        <item>NV</item>
        <item>NH</item>
        <item>NJ</item>
        <item>NM</item>
        <item>NY</item>
        <item>NC</item>
        <item>ND</item>
        <item>OH</item>
        <item>OK</item>
        <item>OR</item>
        <item>PA</item>
        <item>RI</item>
        <item>SC</item>
        <item>SD</item>
        <item>TN</item>
        <item>TX</item>
        <item>UT</item>
        <item>VT</item>
        <item>VA</item>
        <item>WA</item>
        <item>WV</item>
        <item>WI</item>
        <item>WY</item>
    </string-array>

    <!--   Create Profile Edit Text Hints-->
    <string name="priceHint">"10000.00"</string>
    <string name="nameHint">"John Smith"</string>
    <string name="phoneHint">"(123) 456–7890"</string>
    <string name="emailHint">"example@email.com"</string>
    <string name="addressHint">"123 Example St."</string>
    <string name="cityHint">"e.g. San Francisco"</string>
    <string name="zipCodeHint">"Zip Code"</string>
    <string name="stateHint">"e.g. California"</string>
    <string name="bioHint">"Tell us a little bit about the place!"</string>

    <!--    Error Messages-->
    <string name="categoryError">"You must select a housing category"</string>
    <string name="choose_images">Choose Images</string>
    <string name="image_selection_error">Must Select An Image</string>
    <string name="num_images_selected">Selected %d Images</string>

</resources>
