<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".filters.CreatePropertyFilterActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/filterPropertiesToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:titleTextColor="@android:color/white">

        <RelativeLayout
            android:id="@+id/accountInfoToolbarLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/accountInfoBackButton"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentStart="true"
                android:background="@color/transparent"
                android:drawableStart="@drawable/back_arrow"
                android:onClick="exitActivity" />

            <TextView
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_toEndOf="@id/accountInfoBackButton"
                android:text="@string/filter_properties_title"
                android:textColor="@color/white" />

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="170dp"
            android:layout_height="60dp"
            android:layout_marginEnd="7dp"
            android:background="@color/primary"
            android:onClick="setDefaults"
            android:text="@string/resetFilters"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/applyFiltersButton"
            android:layout_width="170dp"
            android:layout_height="60dp"
            android:layout_marginStart="7dp"
            android:background="@color/primary"
            android:onClick="applyFilters"
            android:text="@string/applyFilters"
            android:textColor="@color/white" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/filterScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/filterPropertiesToolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="65dp"
        android:padding="15dp">

        <RelativeLayout
            android:id="@+id/accountInfoLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/monthlyTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rate"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/minTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/monthlyTextView"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="4dp"
                android:text="@string/minTextView"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/minEditText"
                android:layout_width="120dp"
                android:layout_height="30dp"
                android:layout_below="@id/monthlyTextView"
                android:layout_alignBaseline="@id/minTextView"
                android:layout_marginEnd="10dp"
                android:layout_toEndOf="@id/minTextView"
                android:background="@drawable/multi_state_background"
                android:inputType="numberDecimal"
                android:paddingStart="4dp" />

            <TextView
                android:id="@+id/maxTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/minTextView"
                android:layout_marginEnd="4dp"
                android:layout_toEndOf="@id/minEditText"
                android:text="@string/toMaxTextView"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/maxEditText"
                android:layout_width="120dp"
                android:layout_height="30dp"
                android:layout_below="@id/monthlyTextView"
                android:layout_alignBaseline="@id/maxTextView"
                android:layout_toEndOf="@id/maxTextView"
                android:background="@drawable/multi_state_background"
                android:digits="0123456789"
                android:inputType="numberDecimal"
                android:paddingStart="4dp" />

            <TextView
                android:id="@+id/bedroomsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/minEditText"
                android:layout_marginTop="15dp"
                android:text="@string/bedrooms"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.jaygoo.widget.RangeSeekBar
                android:id="@+id/bedroomRangeSeek"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_below="@id/bedroomsTextView"
                android:layout_marginTop="10dp"
                android:padding="4dp"
                app:rsb_progress_color="@color/primary"
                app:rsb_progress_height="6dp"
                app:rsb_step_auto_bonding="true"
                app:rsb_step_color="@color/accent"
                app:rsb_step_height="12dp"
                app:rsb_step_radius="20dp"
                app:rsb_step_width="12dp"
                app:rsb_steps="5"
                app:rsb_tick_mark_mode="other"
                app:rsb_tick_mark_number="6"
                app:rsb_tick_mark_text_array="@array/bedroomsRange"
                app:rsb_tick_mark_text_color="@color/primary_text"
                app:rsb_tick_mark_text_margin="20dp" />

            <TextView
                android:id="@+id/bathroomsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/bedroomRangeSeek"
                android:layout_marginTop="15dp"
                android:text="@string/bathrooms"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.jaygoo.widget.RangeSeekBar
                android:id="@+id/bathroomsRangeSeek"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_below="@id/bathroomsTextView"
                android:layout_marginTop="10dp"
                android:padding="4dp"
                app:rsb_progress_color="@color/primary"
                app:rsb_progress_height="6dp"
                app:rsb_step_auto_bonding="true"
                app:rsb_step_color="@color/accent"
                app:rsb_step_height="12dp"
                app:rsb_step_radius="20dp"
                app:rsb_step_width="12dp"
                app:rsb_steps="5"
                app:rsb_tick_mark_mode="other"
                app:rsb_tick_mark_number="6"
                app:rsb_tick_mark_text_array="@array/bathroomsRange"
                app:rsb_tick_mark_text_color="@color/primary_text"
                app:rsb_tick_mark_text_margin="20dp" />

            <TextView
                android:id="@+id/propertyType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/bathroomsRangeSeek"
                android:layout_marginTop="15dp"
                android:text="@string/propertyTypeTextView"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/propertyTypeSpinner"
                style="@android:style/Widget.Holo.Light.Spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/propertyType"
                android:layout_marginTop="10dp" />

            <TextView
                android:id="@+id/rentalRules"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/propertyTypeSpinner"
                android:layout_marginTop="15dp"
                android:text="@string/rentalRulesTextView"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/petAmenity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/rentalRules"
                android:layout_marginTop="10dp"
                android:text="@string/petsAllowed"
                android:textColor="@color/primary_text" />

            <Spinner
                android:id="@+id/petRulesSpinner"
                style="@android:style/Widget.Holo.Light.Spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/petAmenity"
                android:layout_marginTop="10dp" />

            <TextView
                android:id="@+id/smokingAmenity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/petRulesSpinner"
                android:layout_marginTop="10dp"
                android:text="@string/smokingAmenityTextView"
                android:textColor="@color/primary_text" />

            <Spinner
                android:id="@+id/smokingRulesSpinner"
                style="@android:style/Widget.Holo.Light.Spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/smokingAmenity"
                android:layout_marginTop="10dp" />

            <TextView
                android:id="@+id/rentalAmenities"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/smokingRulesSpinner"
                android:layout_marginTop="15dp"
                android:text="@string/rentalAmenitiesTextView"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/parkingAmenity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/rentalAmenities"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/parkingAmenityTextView"
                android:textColor="@color/primary_text"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/parkingCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/parkingAmenity"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp" />

            <TextView
                android:id="@+id/poolAmenity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/parkingAmenity"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/poolAmenityTextView"
                android:textColor="@color/primary_text"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/poolCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/poolAmenity"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp" />

            <TextView
                android:id="@+id/backyardAmenity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/poolAmenity"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/backyardAmenityTextView"
                android:textColor="@color/primary_text"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/backyardCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/backyardAmenity"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp" />

            <TextView
                android:id="@+id/laundryAmenity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/backyardAmenity"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/laundryTextView"
                android:textColor="@color/primary_text"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/laundryCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/laundryAmenity"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp" />

            <TextView
                android:id="@+id/handicapAmenity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/laundryAmenity"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/assistedLiving"
                android:textColor="@color/primary_text"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/handicapCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/handicapAmenity"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>