<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".account.EditPersonalInfo">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/accountInfoToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:titleTextColor="@android:color/white">

        <RelativeLayout
            android:id="@+id/accountInfoToolbarLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/accountInfoBackButton"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentStart="true"
                android:background="@color/transparent"
                android:drawableStart="@drawable/back_arrow"
                android:onClick="exit" />

            <TextView
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_toEndOf="@id/accountInfoBackButton"
                android:text="@string/account_info"
                android:textColor="@color/white" />

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/FullLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/accountInfoToolbar"
        android:padding="15dp">

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/nameTextView"
            android:layout_marginBottom="10dp"
            android:background="@drawable/multi_state_background"
            android:hint="@string/addressHint"
            android:inputType="text"
            android:padding="6dp" />

        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_text_name"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_text_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/emailTextView"
            android:layout_alignStart="@id/emailTextView"
            android:layout_marginBottom="10dp"
            android:background="@drawable/multi_state_background"
            android:inputType="textEmailAddress"
            android:padding="6dp" />

        <TextView
            android:id="@+id/phoneTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_text_email"
            android:text="@string/phone"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_text_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/phoneTextView"
            android:layout_marginBottom="10dp"
            android:background="@drawable/multi_state_background"
            android:digits="0123456789()-"
            android:inputType="phone"
            android:maxLength="14"
            android:padding="6dp" />

        <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="170dp"
                android:layout_height="60dp"
                android:layout_marginEnd="7dp"
                android:background="@color/primary"
                android:onClick="exit"
                android:text="Cancel"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/applyFiltersButton"
                android:layout_width="170dp"
                android:layout_height="60dp"
                android:layout_marginStart="7dp"
                android:background="@color/primary"
                android:onClick="updateUserInfo"
                android:text="Save"
                android:textColor="@color/white" />

        </LinearLayout>


    </RelativeLayout>

</RelativeLayout>